Usage is overkill. Simplified